Update personal information and Portuguese translations in profile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<div class="mobile_menu_inner">
 			<div class="mobile_in">
 				<div class="logo">
-					<a href="#"><img src="img/logo/dark.png" alt="" /></a>
+					<a href="#"><img src="img/logo/dark.png" alt="Romário Lima" /></a>
 				</div>
 				<div class="trigger">
 					<div class="hamburger hamburger--slider">
@@ -154,10 +154,10 @@
 							<video playsinline autoplay muted loop>
 								 <source src="video/1.mp4" type="video/mp4">
 							</video>
-							<h3>Full stack<br /> Developer</h3>
+							<h3>Full-stack<br /> Developer</h3>
 						</div>
 						<div class="desc">
-							<p>Hi, I'm Alan Walker. A passionate Senior Designer and Front-End Developer based In NYC, USA</p>
+							<p>Olá, sou Romário Lima. Desenvolvedor Full-stack</p>
 						</div>
 						<div class="short_skills">
 							<div class="text">
@@ -190,7 +190,7 @@
 					<div class="left wow fadeInLeft" data-wow-duration="1.5s">
 						<div class="image">
 							<img src="img/thumbs/1-1.jpg" alt="" />
-							<div class="main" data-img-url="img/about/2.jpg"></div>
+							<div class="main" data-img-url="img/about/romario.jpg"></div>
 							<div class="experience">
 								<h3 class="year" data-img-url="img/about/2.jpg">7</h3>
 								<div id="circle">
@@ -212,11 +212,11 @@
 					</div>
 					<div class="right wow fadeInRight" data-wow-duration="1.5s">
 						<div class="ryker_tm_title">
-							<span>About Me</span>
-							<h3>A passionate Senior Designer and Front-End Developer based In NYC, USA</h3>
+							<span>Sobre Mim</span>
+							<h3>Desenvolvedor Full-stack</h3>
 						</div>
 						<div class="text">
-							<p>I am passionate Senior Designer, and I'm very passionate and dedicated to my work. With 7 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.</p>
+							<p>Sou um Full-stack, e sou muito dedicado ao meu trabalho. Com 2 anos de experiência como desenvolvedor Web profissional, adquiri as habilidades e o conhecimento necessários para fazer do seu projeto um sucesso.</p>
 						</div>
 						<div class="signature">
 							<img src="img/signature.png" alt="" />
