--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 										<g>
 											<use xlink:href="#circlePath" fill="none"/>
 											<text fill="#000">
-												<textpath xlink:href="#circlePath">Years of best and successful work experience</textpath>
+												<textpath xlink:href="#circlePath">Anos de melhor e bem-sucedida experiência de trabalho</textpath>
 											</text>
 										</g>
 									</svg>
