Update contact information and Portuguese translations in profile

--- a/index.html
+++ b/index.html
@@ -695,8 +695,8 @@
 									<img class="svg" src="img/svg/location-2.svg" alt="" />
 								</div>
 								<div class="info">
-									<h3>Location</h3>
-									<span>123 Ave street, USA</span>
+									<h3>Localização</h3>
+									<span>Sinop, Mato Grosso</span>
 								</div>
 							</div>
 						</li>
@@ -706,7 +706,7 @@
 									<img class="svg" src="img/svg/telephone-2.svg" alt="" />
 								</div>
 								<div class="info">
-									<h3>Phone</h3>
+									<h3>Telefone</h3>
 									<span>+77 022 155 02 02</span>
 								</div>
 							</div>
@@ -717,8 +717,8 @@
 									<img class="svg" src="img/svg/email-2.svg" alt="" />
 								</div>
 								<div class="info">
-									<h3>Mail</h3>
-									<span>ryker@gmail.com</span>
+									<h3>email</h3>
+									<span>devromariolima@gmail.com</span>
 								</div>
 							</div>
 						</li>
@@ -744,7 +744,7 @@
 									<textarea id="message" placeholder="Message"></textarea>
 								</div>
 								<div class="ryker_tm_button" data-color="dark">
-									<a id="send_message" href="#">Send Message</a>
+									<a id="send_message" href="#">Enviar mensagem</a>
 								</div>
 
 								<!-- If you want change mail address to yours, just open "modal" folder >> contact.php and go to line 4 and change detail to yours.  -->
@@ -769,7 +769,7 @@
 			<div class="container">
 				<div class="copyright_inner">
 					<div class="text wow fadeInLeft" data-wow-duration="1.5s">
-						<p>Copyright &copy; 2021. All rights are reserved</p>
+						<p>Copyright &copy; 2025. All rights are reserved</p>
 					</div>
 					<div class="social wow fadeInRight" data-wow-duration="1.5s">
 						<ul>
