--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 				<div class="list">
 					<ul class="anchor_nav">
 						<li class="current"><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#service">Services</a></li>
+						<li><a href="#about">Sobre</a></li>
+						<li><a href="#service">Serviços</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#news">News</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#contact">Contado</a></li>
 					</ul>
 				</div>
 				<div class="trigger">
