Add new testimonial images and update author information in HTML

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<li><a href="#service">Serviços</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#news">News</a></li>
-						<li><a href="#contact">Contado</a></li>
+						<li><a href="#contact">Contato</a></li>
 					</ul>
 				</div>
 				<div class="trigger">
@@ -527,11 +527,11 @@
 									<p>I rarely like to write reviews, but the developer truly deserve a standing ovation for their customer support, customisation and most importantly, friendliness and professionalism. Very satisfying!!!</p>
 								</div>
 								<div class="details">
-									<h3 class="author"><span>Albert Einstein</span></h3>
+									<h3 class="author"><span>Mauro Moura</span></h3>
 									<h3 class="job"><span>Freelancer</span></h3>
 								</div>
 								<div class="avatar">
-									<div class="image" data-img-url="img/about/2.jpg"></div>
+									<div class="image" data-img-url="img/testimonials/testimonials-1.jpeg"></div>
 								</div>
 								<img class="svg myquote" src="img/svg/quote.svg" alt="" />
 							</div>
@@ -549,11 +549,11 @@
 									<p>The quality of the design is very high, and with a bit of knowledge about HTML and CSS also very easy to customize. Overall a good design, that I am quite happy with. Really appreciate that.</p>
 								</div>
 								<div class="details">
-									<h3 class="author"><span>Avon Smith</span></h3>
+									<h3 class="author"><span>Michael Heming</span></h3>
 									<h3 class="job"><span>Designer</span></h3>
 								</div>
 								<div class="avatar">
-									<div class="image" data-img-url="img/about/1.jpg"></div>
+									<div class="image" data-img-url="img/testimonials/testimonials-4.jpeg"></div>
 								</div>
 								<img class="svg myquote" src="img/svg/quote.svg" alt="" />
 							</div>
@@ -571,11 +571,11 @@
 									<p>I had a problem finding something, asked the support team, got a reply and a solution within a few minutes. Brilliant support! very happy with the website I bought. Thank you developers!!</p>
 								</div>
 								<div class="details">
-									<h3 class="author"><span>Bruce Kennedy</span></h3>
+									<h3 class="author"><span>Gabriel Marcato</span></h3>
 									<h3 class="job"><span>Photographer</span></h3>
 								</div>
 								<div class="avatar">
-									<div class="image" data-img-url="img/about/3.jpg"></div>
+									<div class="image" data-img-url="img/testimonials/testimonials-2.jpeg"></div>
 								</div>
 								<img class="svg myquote" src="img/svg/quote.svg" alt="" />
 							</div>
