Updates testimonial texts to Portuguese

--- a/index.html
+++ b/index.html
@@ -493,22 +493,22 @@
 		<div class="ryker_tm_testimonials">
 			<div id="grouploop">
 				<div class="item-wrap">
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
-					<div class="item"><span>Testimonials</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
+					<div class="item"><span>Depoimentos</span></div>
 				</div>
 			</div>
 			<div class="container">
