--- a/index.html
+++ b/index.html
@@ -308,49 +308,49 @@
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/1.jpg"></div>
+										<div class="main" data-img-url="img/portfolio/1.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
 										<h3>Water Drops</h3>
-										<span>Vimeo</span>
+										<!-- <span>Vimeo</span> -->
 									</div>
-									<a class="ryker_tm_full_link popup-vimeo" href="https://vimeo.com/312334044"></a>
+									<!-- <a class="ryker_tm_full_link popup-vimeo" href="https://vimeo.com/312334044"></a> -->
 								</div>
 							</li>
 							<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/2.jpg"></div>
+										<div class="main" data-img-url="img/portfolio/2.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
 										<h3>Sweet Cherry</h3>
-										<span>Youtube</span>
+										<!-- <span>Youtube</span> -->
 									</div>
-									<a class="ryker_tm_full_link popup-youtube" href="https://www.youtube.com/watch?v=Amq-qlqbjYA"></a>
+									<!-- <a class="ryker_tm_full_link popup-youtube" href="https://www.youtube.com/watch?v=Amq-qlqbjYA"></a> -->
 								</div>
 							</li>
 							<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/3.jpg"></div>
+										<div class="main" data-img-url="img/portfolio/4.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
 										<h3>Red Nike</h3>
-										<span>Soundcloud</span>
+										<!-- <span>Soundcloud</span> -->
 									</div>
-									<a class="ryker_tm_full_link soundcloude_link mfp-iframe audio" href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/252739311&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></a>
+									<!-- <a class="ryker_tm_full_link soundcloude_link mfp-iframe audio" href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/252739311&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></a> -->
 								</div>
 							</li>
 							<li class="wow fadeInUp" data-wow-duration="1.5s">
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/6.jpg"></div>
+										<div class="main" data-img-url="img/portfolio/3.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
@@ -434,21 +434,21 @@
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/5.jpg"></div>
+										<div class="main" data-img-url="img/portfolio/5.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
 										<h3>Pantone</h3>
 										<span>Image</span>
 									</div>
-									<a class="ryker_tm_full_link zoom" href="img/portfolio/5.jpg"></a>
+									<a class="ryker_tm_full_link zoom" href="img/portfolio/5.png"></a>
 								</div>
 							</li>
 							<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/4.jpg"></div>
+										<div class="main" data-img-url="img/portfolio/7.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
