Remove commented-out experience and signature sections in HTML

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 						<div class="image">
 							<img src="img/thumbs/1-1.jpg" alt="" />
 							<div class="main" data-img-url="img/about/romario.jpg"></div>
-							<div class="experience">
-								<h3 class="year" data-img-url="img/about/2.jpg">7</h3>
+							<!-- <div class="experience"> -->
+								<!-- <h3 class="year" data-img-url="img/about/2.jpg">7</h3> -->
 								<div id="circle">
 									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
 										<defs>
@@ -202,12 +202,12 @@
 										<g>
 											<use xlink:href="#circlePath" fill="none"/>
 											<text fill="#000">
-												<textpath xlink:href="#circlePath">Anos de melhor e bem-sucedida experiência de trabalho</textpath>
+												<!-- <textpath xlink:href="#circlePath">Anos de melhor e bem-sucedida experiência de trabalho</textpath> -->
 											</text>
 										</g>
 									</svg>
 								</div>
-							</div>
+							<!-- </div> -->
 						</div>
 					</div>
 					<div class="right wow fadeInRight" data-wow-duration="1.5s">
@@ -218,9 +218,9 @@
 						<div class="text">
 							<p>Sou um Full-stack, e sou muito dedicado ao meu trabalho. Com 2 anos de experiência como desenvolvedor Web profissional, adquiri as habilidades e o conhecimento necessários para fazer do seu projeto um sucesso.</p>
 						</div>
-						<div class="signature">
+						<!-- <div class="signature">
 							<img src="img/signature.png" alt="" />
-						</div>
+						</div> -->
 						<div class="ryker_tm_button">
 							<a href="#">Download CV</a>
 						</div>
