--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						</div>
 						<div class="short_skills">
 							<div class="text">
-								<span>High knowledge on<br />softwares</span>
+								<span>Conhecimentos em</span>
 							</div>
 							<div class="icons">
 								<ul>
