Updates skill percentages and adds new technologies to the portfolio

--- a/index.html
+++ b/index.html
@@ -245,16 +245,40 @@
 							<p>For more than 20 years our experts have been accomplishing enough with modern Web Development, new generation programming language, and Full Stack developers to deliver cost-effective solutions.</p>
 						</div>
 						<div class="ryker_progress">
-							<div class="progress_inner" data-value="95">
-								<span><span class="label">HTML &amp; CSS</span><span class="number">95%</span></span>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">HTML &amp; CSS</span></span>
 								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 							</div>
-							<div class="progress_inner" data-value="80" >
-								<span><span class="label">JavaScript</span><span class="number">80%</span></span>
+							<div class="progress_inner" data-value="100" >
+								<span><span class="label">JavaScript</span></span>
 								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 							</div>
-							<div class="progress_inner" data-value="90">
-								<span><span class="label">WordPress</span><span class="number">90%</span></span>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">Vue.js</span></span>
+								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+							</div>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">React</span></span>
+								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+							</div>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">Flutter</span></span>
+								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+							</div>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">Back-end</span></span>
+								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+							</div>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">Node.js</span></span>
+								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+							</div>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">Python</span></span>
+								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
+							</div>
+							<div class="progress_inner" data-value="100">
+								<span><span class="label">PHP/Laravel</span></span>
 								<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 							</div>
 						</div>
