Updates the text from Services to Serviços in the HTML

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				<div class="services_inner">
 					<div class="left">
 						<div class="ryker_tm_title">
-							<span>Services</span>
+							<span>Serviços</span>
 							<h3>I offer a Full-cycle of Web Development Services</h3>
 						</div>
 						<div class="text">
