Updates service texts to Portuguese in HTML

--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
 					<div class="left">
 						<div class="ryker_tm_title">
 							<span>Serviços</span>
-							<h3>I offer a Full-cycle of Web Development Services</h3>
+							<h3>Ofereço um ciclo completo de serviços de desenvolvimento web</h3>
 						</div>
 						<div class="text">
-							<p>For more than 20 years our experts have been accomplishing enough with modern Web Development, new generation programming language, and Full Stack developers to deliver cost-effective solutions.</p>
+							<p>Olá, sou Desenvolvedor Full-Stack com experiência em React e outras bibliotecas de front-end. Formado em análise e desenvolvimento de sistemas.</p>
 						</div>
 						<div class="ryker_progress">
 							<div class="progress_inner" data-value="100">
