Updates skill texts to Portuguese in HTML

--- a/index.html
+++ b/index.html
@@ -294,19 +294,19 @@
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 								<div class="list_inner">
 									<img class="svg" src="img/svg/code.svg" alt="" />
-									<h3 class="title">Development</h3>
+									<h3 class="title">Desenvolvimento</h3>
 								</div>
 							</li>
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 								<div class="list_inner">
 									<img class="svg" src="img/svg/award.svg" alt="" />
-									<h3 class="title">Quality</h3>
+									<h3 class="title">Qualidade</h3>
 								</div>
 							</li>
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s">
 								<div class="list_inner">
 									<img class="svg" src="img/svg/tools.svg" alt="" />
-									<h3 class="title">Maintain</h3>
+									<h3 class="title">Manutenção</h3>
 								</div>
 							</li>
 						</ul>
