Updates the text from Design to Creativity in the HTML

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s">
 								<div class="list_inner">
 									<img class="svg" src="img/svg/design.svg" alt="" />
-									<h3 class="title">Design</h3>
+									<h3 class="title">Criatividade</h3>
 								</div>
 							</li>
 							<li class="grid-item wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
