Remove video section and update contact text to Portuguese in HTML

--- a/index.html
+++ b/index.html
@@ -857,28 +857,6 @@
 	</div>
 	<!-- /PORTFOLIO -->
 	
-	<!-- VIDEO -->
-	<div class="ryker_tm_section">
-		<div class="ryker_tm_video">
-			<div class="background">
-				<div class="image jarallax" data-speed="0" data-img-url="img/hero/1.jpg"></div>
-				<div class="overlay"></div>
-			</div>
-			<div class="content">
-				<div class="container">
-					<div class="content_inner">
-						<span class="rounded"><a class="popup-youtube" href="https://www.youtube.com/watch?v=ICr_bOuM9Zo"></a></span>
-						<h3 class="text wow fadeInUp" data-wow-duration="1.5s">I am delivering beautiful digital products for my clients</h3>
-						<div class="ryker_tm_button wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
-							<a class="popup-youtube" href="https://www.youtube.com/watch?v=ICr_bOuM9Zo">Watch Video</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- /VIDEO -->
-	
 	<!-- TESTIMONIALS -->
 	<div class="ryker_tm_section">
 		<div class="ryker_tm_testimonials">
@@ -1075,8 +1053,8 @@
 		<div class="ryker_tm_contact">
 			<div class="container">
 				<div class="ryker_tm_title">
-					<span>Contact</span>
-					<h3>Feel free to contact me if any assistance is needed in the future</h3>
+					<span>Contato</span>
+					<h3>Sinta-se à vontade para entrar em contato comigo caso precise de ajuda no futuro.</h3>
 				</div>
 				<div class="short_info wow fadeInUp" data-wow-duration="1.5s">
 					<ul>
