Update contact form to send data to correct script and translate messages to Portuguese

--- a/index.html
+++ b/index.html
@@ -1096,9 +1096,9 @@
 				<div class="wrapper">
 					<div class="left wow fadeInUp" data-wow-duration="1.5s">
 						<div class="fields">
-							<form action="/" method="post" class="contact_form" id="contact_form">
-								<div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
-								<div class="empty_notice"><span>Please Fill Required Fields</span></div>
+							<form action="/modal/contact.php" method="post" class="contact_form" id="contact_form">
+								<div class="returnmessage" data-success="Sua mensagem foi recebida. Entraremos em contato em breve."></div>
+								<div class="empty_notice"><span>Por favor preencha os campos obrigatórios</span></div>
 								<div class="first">
 									<ul>
 										<li>
