Comment map section in HTML

--- a/index.html
+++ b/index.html
@@ -1121,11 +1121,11 @@
 							</form>
 						</div>
 					</div>
-					<div class="right wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
+					<!-- <div class="right wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 						<div class="map_wrap">
 							<div class="map" id="ieatmaps"></div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
