Update news section to Portuguese

--- a/index.html
+++ b/index.html
@@ -961,8 +961,8 @@
 		<div class="ryker_tm_news">
 			<div class="container">
 				<div class="ryker_tm_title">
-					<span>News</span>
-					<h3>Check out the latest breaking news headlines on development</h3>
+					<span>Experiência</span>
+					<h3>Confira minhas últimas Experiências profissionais</h3>
 				</div>
 				<div class="news_list">
 					<ul>
