--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<li><a href="#about">Sobre</a></li>
 						<li><a href="#service">Serviços</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#news">News</a></li>
+						<li><a href="#news">Experiência</a></li>
 						<li><a href="#contact">Contato</a></li>
 					</ul>
 				</div>
