Add line break after developer description in skills section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							<h3>Full-stack<br /> Developer</h3>
 						</div>
 						<div class="desc">
-							<p>Olá, sou Romário Lima. Desenvolvedor Full-stack</p>
+							<p>Olá, sou Romário Lima. Desenvolvedor Full-stack</p><br>
 						</div>
 						<div class="short_skills">
 							<div class="text">
