--- a/index.html
+++ b/index.html
@@ -893,11 +893,11 @@
 									<li><img class="svg" src="img/svg/star.svg" alt="" /></li>
 								</ul>
 								<div class="text">
-									<p>I rarely like to write reviews, but the developer truly deserve a standing ovation for their customer support, customisation and most importantly, friendliness and professionalism. Very satisfying!!!</p>
+									<p>Romário Lima é excelente no desenvolvimento front-end, com habilidades incríveis.</p>
 								</div>
 								<div class="details">
 									<h3 class="author"><span>Mauro Moura</span></h3>
-									<h3 class="job"><span>Freelancer</span></h3>
+									<h3 class="job"><span>Senior Mobile Developer</span></h3>
 								</div>
 								<div class="avatar">
 									<div class="image" data-img-url="img/testimonials/testimonials-1.jpeg"></div>
@@ -915,11 +915,12 @@
 									<li><img class="svg" src="img/svg/star.svg" alt="" /></li>
 								</ul>
 								<div class="text">
-									<p>The quality of the design is very high, and with a bit of knowledge about HTML and CSS also very easy to customize. Overall a good design, that I am quite happy with. Really appreciate that.</p>
+									<p>Romário Lima é um desenvolvedor que admiro muito. Sua habilidade técnica e dedicação são
+										impressionantes. Trabalhar com ele foi incrível.</p>
 								</div>
 								<div class="details">
 									<h3 class="author"><span>Michael Heming</span></h3>
-									<h3 class="job"><span>Designer</span></h3>
+									<h3 class="job"><span>Desenvolvedor Front-End | ReactJs/NextJs | Typescript</span></h3>
 								</div>
 								<div class="avatar">
 									<div class="image" data-img-url="img/testimonials/testimonials-4.jpeg"></div>
@@ -937,11 +938,11 @@
 									<li><img class="svg" src="img/svg/star.svg" alt="" /></li>
 								</ul>
 								<div class="text">
-									<p>I had a problem finding something, asked the support team, got a reply and a solution within a few minutes. Brilliant support! very happy with the website I bought. Thank you developers!!</p>
+									<p>Romário Lima é excelente no desenvolvimento front-end, com habilidades incríveis.</p>
 								</div>
 								<div class="details">
 									<h3 class="author"><span>Gabriel Marcato</span></h3>
-									<h3 class="job"><span>Photographer</span></h3>
+									<h3 class="job"><span>Fullstack Developer</span></h3>
 								</div>
 								<div class="avatar">
 									<div class="image" data-img-url="img/testimonials/testimonials-2.jpeg"></div>
