--- a/index.html
+++ b/index.html
@@ -970,13 +970,13 @@
 						<li class="wow fadeInUp" data-wow-duration="1.5s">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/thumbs/4-3.jpg" alt="" />
-									<div class="main" data-img-url="img/news/1.jpg"></div>
+									<img src="img/experience/1.png" alt="" />
+									<div class="main" data-img-url="img/experience/1.png"></div>
 									<a class="ryker_tm_full_link" href="#"></a>
 								</div>
 								<div class="details">
-									<span>August 15, 2021 <a href="#">Branding</a></span>
-									<h3 class="title"><a href="#">Good Travel</a></h3>
+									<span>dezembro 2017 - setembro 2023 <a href="#">Branding</a></span>
+									<h3 class="title"><a href="#">TopSapp - Sistema para gestão de provedores</a></h3>
 								</div>
 								<div class="hide_content">
 									<div class="descriptions">
@@ -995,13 +995,13 @@
 						<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/thumbs/4-3.jpg" alt="" />
-									<div class="main" data-img-url="img/news/2.jpg"></div>
+									<img src="img/experience/2.jpg" alt="" />
+									<div class="main" data-img-url="img/experience/2.jpg"></div>
 									<a class="ryker_tm_full_link" href="#"></a>
 								</div>
 								<div class="details">
-									<span>July 25, 2021 <a href="#">Design</a></span>
-									<h3 class="title"><a href="#">National Geographic</a></h3>
+									<span>Junho 2023 - Março 2025 <a href="#">Desenvolvedor full stack</a></span>
+									<h3 class="title"><a href="#">Esfera Solar</a></h3>
 								</div>
 								<div class="hide_content">
 									<div class="descriptions">
@@ -1020,13 +1020,13 @@
 						<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/thumbs/4-3.jpg" alt="" />
-									<div class="main" data-img-url="img/news/3.jpg"></div>
+									<img src="img/experience/4.png" alt="" />
+									<div class="main" data-img-url="img/experience/4.png"></div>
 									<a class="ryker_tm_full_link" href="#"></a>
 								</div>
 								<div class="details">
-									<span>June 02, 2021 <a href="#">Nature</a></span>
-									<h3 class="title"><a href="#">Famous Lake</a></h3>
+									<span>Março 2025 - até o momento <a href="#">Desenvolvedor full stack</a></span>
+									<h3 class="title"><a href="#">Agrodata informatica</a></h3>
 								</div>
 								<div class="hide_content">
 									<div class="descriptions">
