--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
 									<a class="ryker_tm_full_link" href="#"></a>
 								</div>
 								<div class="details">
-									<span>dezembro 2017 - setembro 2023 <a href="#">Branding</a></span>
+									<span>dezembro 2017 - setembro 2023 <a href="#">Analista de suporte - Analista comercial</a></span>
 									<h3 class="title"><a href="#">TopSapp - Sistema para gestão de provedores</a></h3>
 								</div>
 								<div class="hide_content">
