--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<a class="link" href="#"></a>
 		</div>
 		<div class="wrapper">
-			<span class="title">Unlimited Colors</span>
+			<span class="title">Alterar Tema</span>
 			<ul class="colors">
 				<li><a class="blue" href="#"></a></li>
 				<li><a class="green" href="#"></a></li>
@@ -64,7 +64,7 @@
 				<li><a class="olive" href="#"></a></li>
 				<li><a class="red" href="#"></a></li>
 			</ul>
-			<span class="title">Magic Cursor</span>
+			<span class="title">Cursor Mágico</span>
 			<ul class="cursor">
 				<li><a class="showme show" href="#"></a></li>
 				<li><a class="hide" href="#"><img class="svg" src="img/svg/arrow.svg" alt="" /></a></li>
