Comments on unused color options in the theme

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
 			<span class="title">Alterar Tema</span>
 			<ul class="colors">
 				<li><a class="blue" href="#"></a></li>
-				<li><a class="green" href="#"></a></li>
-				<li><a class="brown" href="#"></a></li>
+				<!-- <li><a class="green" href="#"></a></li> -->
+				<!-- <li><a class="brown" href="#"></a></li> -->
 				<li><a class="pink" href="#"></a></li>
-				<li><a class="orange" href="#"></a></li>
+				<!-- <li><a class="orange" href="#"></a></li> -->
 				<li class="bl"><a class="black" href="#"></a></li>
-				<li class="wh"><a class="white" href="#"></a></li>
+				<!-- <li class="wh"><a class="white" href="#"></a></li> -->
 				<li><a class="purple" href="#"></a></li>
-				<li><a class="sky" href="#"></a></li>
-				<li><a class="cadetBlue" href="#"></a></li>
-				<li><a class="crimson" href="#"></a></li>
-				<li><a class="olive" href="#"></a></li>
-				<li><a class="red" href="#"></a></li>
+				<!-- <li><a class="sky" href="#"></a></li> -->
+				<!-- <li><a class="cadetBlue" href="#"></a></li> -->
+				<!-- <li><a class="crimson" href="#"></a></li> -->
+				<!-- <li><a class="olive" href="#"></a></li> -->
+				<!-- <li><a class="red" href="#"></a></li> -->
 			</ul>
 			<span class="title">Cursor Mágico</span>
 			<ul class="cursor">
