Uncomment the orange color option in the theme

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<!-- <li><a class="green" href="#"></a></li> -->
 				<!-- <li><a class="brown" href="#"></a></li> -->
 				<li><a class="pink" href="#"></a></li>
-				<!-- <li><a class="orange" href="#"></a></li> -->
+				<li><a class="orange" href="#"></a></li>
 				<li class="bl"><a class="black" href="#"></a></li>
 				<!-- <li class="wh"><a class="white" href="#"></a></li> -->
 				<li><a class="purple" href="#"></a></li>
