Updates project details to display information about the GitHub API and translates some sections to Portuguese

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
-										<h3>Blue Lemon</h3>
-										<span>Detail</span>
+										<h3>GitHub API Repository</h3>
+										<span>Detalhes</span>
 									</div>
 									<a class="ryker_tm_full_link popup_info" href="#"></a>
 								</div>
@@ -349,25 +349,27 @@
 										<div class="portfolio_main_title"></div>
 										<div class="main_details">
 											<div class="textbox">
-												<p>The origin of the lemon is unknown, though lemons are thought to have first grown in Assam (a region in northeast India), northern Burma or China. A genomic study of the lemon indicated it was a hybrid between bitter orange and citron.</p>
-												<p>The first substantial cultivation of lemons in Europe began in Genoa in the middle of the 15th century. The lemon was later introduced to the Americas in 1493 when Christopher Columbus brought lemon seeds to Hispaniola on his voyages. Spanish conquest throughout the New World helped spread lemon seeds.</p>
+												<p>
+													Este é um projeto simples que consome a API do GitHub para exibir informações sobre repositórios de usuário. Ele foi criado utilizando HTML, CSS e JavaScript. <br> <br>
+
+													- Funcionalidades <br> <br>
+
+													Pesquisa e exibição de informações de repositórios do GitHub.
+													Exibição de detalhes, como nome do repositório, linguagem, descrição e Link do repositorio.
+													Links diretos para o repositório no GitHub.</p>
 											</div>
 											<div class="detailbox">
 												<ul>
 													<li>
-														<span class="first">Client</span>
-														<span>Alvaro Morata</span>
+														<span class="first">Categoria</span>
+														<span><a href="#">Web</a></span>
 													</li>
 													<li>
-														<span class="first">Category</span>
-														<span><a href="#">Detail</a></span>
-													</li>
-													<li>
-														<span class="first">Date</span>
+														<span class="first">Data</span>
 														<span>March 07, 2021</span>
 													</li>
 													<li>
-														<span class="first">Share</span>
+														<span class="first">Compartilhar</span>
 														<ul class="share">
 															<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 															<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
