Updates project details to reflect APIWatchdog information and translates sections to Portuguese

--- a/index.html
+++ b/index.html
@@ -418,12 +418,12 @@
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/3.png"></div>
+										<div class="main" data-img-url="img/portfolio/1.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
-										<h3>Blue Lemon</h3>
-										<span>Detail</span>
+										<h3>APIWatchdog</h3>
+										<span>Detalhes</span>
 									</div>
 									<a class="ryker_tm_full_link popup_info" href="#"></a>
 								</div>
@@ -435,18 +435,19 @@
 										<div class="portfolio_main_title"></div>
 										<div class="main_details">
 											<div class="textbox">
-												<p>The origin of the lemon is unknown, though lemons are thought to have first grown in Assam (a region in northeast India), northern Burma or China. A genomic study of the lemon indicated it was a hybrid between bitter orange and citron.</p>
-												<p>The first substantial cultivation of lemons in Europe began in Genoa in the middle of the 15th century. The lemon was later introduced to the Americas in 1493 when Christopher Columbus brought lemon seeds to Hispaniola on his voyages. Spanish conquest throughout the New World helped spread lemon seeds.</p>
+												<p>APIWatchdog é uma automação em Python que monitora o status de APIs e envia notificações ao seu bot do Telegram quando uma API fica inoperante. O objetivo é alertar rapidamente sobre qualquer indisponibilidade, permitindo ações rápidas para restaurar o serviço.
+													Este projeto implementa uma automação em Python para monitorar a disponibilidade de APIs e enviar notificações via Telegram quando uma API monitorada está inoperante. A integração com o Telegram é feita utilizando um bot configurado pelo BotFather.</p> <br>
+												<p>Funcionalidades <br> <br>
+													Monitora APIs através de requisições periódicas.
+													Verifica o status de resposta (HTTP status codes).
+													Notifica via Telegram quando a API monitora está inoperante ou com problemas de conectividade.
+													Fácil configuração para adicionar ou remover APIs monitoradas.</p>
 											</div>
 											<div class="detailbox">
 												<ul>
 													<li>
-														<span class="first">Client</span>
-														<span>Alvaro Morata</span>
-													</li>
-													<li>
-														<span class="first">Category</span>
-														<span><a href="#">Detail</a></span>
+														<span class="first">Categoria</span>
+														<span><a href="#">Python</a></span>
 													</li>
 													<li>
 														<span class="first">Date</span>
