Updates portfolio details to reflect information about the application API advices and translates sections to Portuguese

--- a/index.html
+++ b/index.html
@@ -503,12 +503,12 @@
 								<div class="list_inner">
 									<div class="image">
 										<img src="img/thumbs/1-1.jpg" alt="" />
-										<div class="main" data-img-url="img/portfolio/3.png"></div>
+										<div class="main" data-img-url="img/portfolio/2.png"></div>
 									</div>
 									<div class="overlay"></div>
 									<div class="details">
-										<h3>Blue Lemon</h3>
-										<span>Detail</span>
+										<h3>Api advices</h3>
+										<span>Detalhes</span>
 									</div>
 									<a class="ryker_tm_full_link popup_info" href="#"></a>
 								</div>
@@ -520,25 +520,27 @@
 										<div class="portfolio_main_title"></div>
 										<div class="main_details">
 											<div class="textbox">
-												<p>The origin of the lemon is unknown, though lemons are thought to have first grown in Assam (a region in northeast India), northern Burma or China. A genomic study of the lemon indicated it was a hybrid between bitter orange and citron.</p>
-												<p>The first substantial cultivation of lemons in Europe began in Genoa in the middle of the 15th century. The lemon was later introduced to the Americas in 1493 when Christopher Columbus brought lemon seeds to Hispaniola on his voyages. Spanish conquest throughout the New World helped spread lemon seeds.</p>
+												<p>O Api-advices é uma aplicação simples desenvolvida com HTML, CSS e JavaScript, que se integra a uma API para gerar conselhos aleatórios. Esta aplicação é perfeita para quem busca uma dose rápida de inspiração, conselhos úteis ou apenas uma mensagem motivacional. <br> <br>
+
+													Funcionalidades <br> <br>
+
+													- Geração de conselhos aleatórios com um simples clique.<br>
+													- Interface intuitiva e amigável, fácil de usar.<br>
+													- Integração com uma API externa para acesso aos conselhos. <br>
+												</p>
 											</div>
 											<div class="detailbox">
 												<ul>
 													<li>
-														<span class="first">Client</span>
-														<span>Alvaro Morata</span>
-													</li>
-													<li>
-														<span class="first">Category</span>
-														<span><a href="#">Detail</a></span>
+														<span class="first">Categoria</span>
+														<span><a href="#">Web</a></span>
 													</li>
 													<li>
 														<span class="first">Date</span>
 														<span>March 07, 2021</span>
 													</li>
 													<li>
-														<span class="first">Share</span>
+														<span class="first">Compartilhar</span>
 														<ul class="share">
 															<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 															<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
