Add new images to the portfolio and update project details to reflect information about the Facebook interface clone in Flutter, including Portuguese translation.

--- a/index.html
+++ b/index.html
@@ -590,12 +590,12 @@
 							<div class="list_inner">
 								<div class="image">
 									<img src="img/thumbs/1-1.jpg" alt="" />
-									<div class="main" data-img-url="img/portfolio/3.png"></div>
+									<div class="main" data-img-url="img/portfolio/5.png"></div>
 								</div>
 								<div class="overlay"></div>
 								<div class="details">
-									<h3>Blue Lemon</h3>
-									<span>Detail</span>
+									<h3>FacebookFlutterUI</h3>
+									<span>Detalhes</span>
 								</div>
 								<a class="ryker_tm_full_link popup_info" href="#"></a>
 							</div>
@@ -607,18 +607,22 @@
 									<div class="portfolio_main_title"></div>
 									<div class="main_details">
 										<div class="textbox">
-											<p>The origin of the lemon is unknown, though lemons are thought to have first grown in Assam (a region in northeast India), northern Burma or China. A genomic study of the lemon indicated it was a hybrid between bitter orange and citron.</p>
-											<p>The first substantial cultivation of lemons in Europe began in Genoa in the middle of the 15th century. The lemon was later introduced to the Americas in 1493 when Christopher Columbus brought lemon seeds to Hispaniola on his voyages. Spanish conquest throughout the New World helped spread lemon seeds.</p>
+											<p>TEste projeto é um clone da interface do Facebook, desenvolvido em Flutter. Ele possui uma interface responsiva que se adapta a diferentes tamanhos de tela, desde dispositivos móveis até desktops. O objetivo deste projeto é praticar o desenvolvimento de interfaces responsivas em Flutter e aprender a construir uma UI complexa inspirada no Facebook. <br><br>
+
+												Funcionalidades <br> <br>
+
+												- Design responsivo que se adapta a diferentes dispositivos (celulares, tablets e desktops). <br>
+												- Barra de navegação semelhante ao Facebook. <br>
+												- Seção de feed com postagens e interações. <br>
+												- Layout com colunas e cartões para dispositivos maiores. <br>
+												- Estilo visual inspirado na interface do Facebook. <br>
+											</p>
 										</div>
 										<div class="detailbox">
 											<ul>
 												<li>
-													<span class="first">Client</span>
-													<span>Alvaro Morata</span>
-												</li>
-												<li>
-													<span class="first">Category</span>
-													<span><a href="#">Detail</a></span>
+													<span class="first">Categoria</span>
+													<span><a href="#">Flutter</a></span>
 												</li>
 												<li>
 													<span class="first">Date</span>
