Translate Share to Share in the sharing section

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 													<span>March 07, 2021</span>
 												</li>
 												<li>
-													<span class="first">Share</span>
+													<span class="first">Compartilhar</span>
 													<ul class="share">
 														<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
 														<li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li>
