Remove outdated images and update technology icons in the portfolio

--- a/index.html
+++ b/index.html
@@ -167,8 +167,10 @@
 								<ul>
 									<li><img class="svg" src="img/svg/html.svg" alt="" /></li>
 									<li><img class="svg" src="img/svg/css.svg" alt="" /></li>
-									<li><img class="svg" src="img/svg/angular.svg" alt="" /></li>
+									<li><img class="svg" src="img/svg/js.svg" alt="" /></li>
 									<li><img class="svg" src="img/svg/bootstrap.svg" alt="" /></li>
+									<li><img class="svg" src="img/svg/vue.svg" alt="" /></li>
+									<li><img class="svg" src="img/svg/react.svg" alt="" /></li>
 								</ul>
 							</div>
 						</div>
