Replaces old image with new one and updates experience details in portfolio

--- a/index.html
+++ b/index.html
@@ -1055,11 +1055,11 @@
 								</div>
 							</div>
 						</li>
-						<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
+						<li class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/experience/4.png" alt="" />
-									<div class="main" data-img-url="img/experience/3.png"></div>
+									<img src="img/experience/2.jpg" alt="" />
+									<div class="main" data-img-url="img/experience/3.jpeg"></div>
 									<a class="ryker_tm_full_link" href="#"></a>
 								</div>
 								<div class="details">
@@ -1068,7 +1068,8 @@
 								</div>
 								<div class="hide_content">
 									<div class="descriptions">
-										<p class="bigger">Na Agrodata Informática, atuo como desenvolvedor Full Stack, trabalhando com tecnologias modernas para construir e integrar sistemas eficientes. Minha rotina envolve o desenvolvimento front-end com Vue.js, criando interfaces dinâmicas e responsivas, enquanto no back-end utilizo Laravel para implementar lógica de negócios e integrações.
+										<p class="bigger">
+											Na Agrodata Informática, atuo como desenvolvedor Full Stack, trabalhando com tecnologias modernas para construir e integrar sistemas eficientes. Minha rotina envolve o desenvolvimento front-end com Vue.js, criando interfaces dinâmicas e responsivas, enquanto no back-end utilizo Laravel para implementar lógica de negócios e integrações.
 											Uma parte importante do meu trabalho é o consumo de APIs GraphQL, garantindo comunicação ágil e performática entre front e back-end. Além disso, aplico JavaScript em diversos contextos, desde a construção de componentes reativos até a otimização de fluxos de dados.
 											Essa experiência tem me permitido aprimorar minhas habilidades em desenvolvimento web, trabalhando em projetos que exigem tanto solidez técnica quanto capacidade de adaptação. Cada desafio reforça minha expertise em entregar soluções completas, desde a concepção até a implementação.</p>
 										<!-- <p>Most photographers love to shoot the unusual, and you don’t get much more unusual than These Unprecedented Times. Right now everything counts as out of the ordinary. There are a number of remarkable things about these lockdown days that are worth photographing now so we can remember them when it is all over.</p> -->
