Add GitHub icons to portfolio and update image references

--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
 					<div class="social wow fadeInRight" data-wow-duration="1.5s">
 						<ul>
 							<li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt="" /></a></li>
-							<!-- <li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt="" /></a></li> -->
+							<li><a href="#"><img class="svg" src="img/svg/social/github-mark-white.png" alt="" /></a></li>
 							<li><a href="#"><img class="svg" src="img/svg/social/instagram.svg" alt="" /></a></li>
 							<!-- <li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt="" /></a></li> -->
 							<!-- <li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt="" /></a></li> -->
