Updates project description and replaces testimonial image in portfolio

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 									<div class="portfolio_main_title"></div>
 									<div class="main_details">
 										<div class="textbox">
-											<p>TEste projeto é um clone da interface do Facebook, desenvolvido em Flutter. Ele possui uma interface responsiva que se adapta a diferentes tamanhos de tela, desde dispositivos móveis até desktops. O objetivo deste projeto é praticar o desenvolvimento de interfaces responsivas em Flutter e aprender a construir uma UI complexa inspirada no Facebook. <br><br>
+											<p>este projeto é um clone da interface do Facebook, desenvolvido em Flutter. Ele possui uma interface responsiva que se adapta a diferentes tamanhos de tela, desde dispositivos móveis até desktops. O objetivo deste projeto é praticar o desenvolvimento de interfaces responsivas em Flutter e aprender a construir uma UI complexa inspirada no Facebook. <br><br>
 
 												Funcionalidades <br> <br>
 
@@ -947,7 +947,7 @@
 									<h3 class="job"><span>Desenvolvedor Front-End | ReactJs/NextJs | Typescript</span></h3>
 								</div>
 								<div class="avatar">
-									<div class="image" data-img-url="img/testimonials/testimonials-4.jpeg"></div>
+									<div class="image" data-img-url="img/testimonials/testimonials-3.jpeg"></div>
 								</div>
 								<img class="svg myquote" src="img/svg/quote.svg" alt="" />
 							</div>
