--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!-- /PRELOADER -->
 	
 <!-- WRAPPER ALL -->
-<div class="ryker_tm_all_wrap" data-magic-cursor="show" data-color="brown"> 
+<div class="ryker_tm_all_wrap" data-magic-cursor="show" data-color="purple"> 
 
 	<!-- MAGIC CURSOR VALUES: "", hide -->
 	<!-- COLOR VALUES: blue, green, brown, pink, orange, black, white, purple, sky, cadetBlue, crimson, olive, red -->
